[gd_scene load_steps=4 format=2]

[ext_resource path="res://Art Assets/Enemies/finjanortnite.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MeleeEnemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 40.0

[node name="MeleeEnemy" type="KinematicBody2D"]
z_index = 1
script = ExtResource( 2 )

[node name="EnemyCollider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnemySprite" type="Sprite" parent="."]
scale = Vector2( 0.36, 0.36 )
texture = ExtResource( 1 )

[node name="AttackRay" type="RayCast2D" parent="EnemySprite"]
enabled = true
cast_to = Vector2( 250, 0 )

[node name="VisionRay" type="RayCast2D" parent="EnemySprite"]
enabled = true
cast_to = Vector2( 3000, 0 )
